feat(core): 合并并行会话漏洞优化——EventDeserializer 安全反序列化 + EntityIdRegistry/EntityIdPath 类型注册 + ProjectionRunInfo/getLastRunInfo 状态回填
- EventDeserializer：Class.forName 前校验全限定类名格式，防不可信 eventType 注入（JPA/R2DBC/ESDB 三实现统一接入）
- EntityIdRegistry + EntityIdPath @JsonCreator/TYPE 分隔符：类型化 EntityId 注册与 JSON 往返
- ProjectionMetrics.getLastRunInfo + ProjectionRunInfo：三个运行时 ViewManager 回填投影状态运行时字段
- 修复：StringEntityId.TYPE 改包级可见（EntityIdRegistry 访问）；QuarkusJpaViewManager 非 CDI 构造空指针防御